--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,9 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y openjdk-8-jdk
-        pip install buildozer
+        sudo apt install -y openjdk-8-jdk build-essential
+        pip install --upgrade pip
+        pip install buildozer cython
         
     - name: Build APK
       run: |
