kivy workflow fix ahhh

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,22 +10,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Python
-      uses: actions/setup-python@v4
+    - name: Build with Buildozer
+      uses: ArtemSBulgakov/buildozer-action@v1
       with:
-        python-version: '3.9'
-        
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y openjdk-8-jdk build-essential
-        pip install --upgrade pip
-        pip install buildozer cython
-        
-    - name: Build APK
-      run: |
-        buildozer init
-        buildozer android debug
+        command: buildozer android debug
+        buildozer_version: master
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
