--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,32 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Create buildozer.spec
+      run: |
+        cat > buildozer.spec << 'EOF'
+        [app]
+        title = LIS Prediction
+        package.name = lisprediction
+        package.domain = org.example
+        
+        source.dir = .
+        source.include_exts = py,png,jpg,kv,atlas
+        
+        version = 0.1
+        requirements = python3,kivy
+        
+        [buildozer]
+        log_level = 2
+        
+        [app:android]
+        android.permissions = INTERNET
+        android.api = 33
+        android.minapi = 21
+        android.ndk = 25b
+        android.sdk = 33
+        android.accept_sdk_license = True
+        EOF
+        
     - name: Build with Buildozer
       uses: ArtemSBulgakov/buildozer-action@v1
       with:
